# wp1-neardetector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gastpc/G4Sim/: BeamSpillGenerator.cxx  BeamSpillGenerator.h  CMakeLists.txt  DefaultRunAction.cxx  DefaultSteppingAction.h  DefaultTrackingAction.cxx  DefaultTrackingAction.h  DuneGArNDDetConstr.cxx  DuneGArNDEcalModuleGeometry.h  DuneGArNDVesselGeometry.cxx  GHepReader.cxx  GHepReader.h  MaterialsList.h  ParticleGunGenerator.cxx  PersistencyManager.cxx  RunManager.cxx  RunManager.h  TrackingHit.cxx  Trajectory.h  TrajectoryMap.cxx  TrajectoryMap.h  TrajectoryPoint.cxx  TrajectoryPoint.h  UniformMagneticField.cxx
gastpc/apps/: CMakeLists.txt  DstDump.cxx  EventRecordDump.cxx  EvtRecDump.cxx  GArEnergyLoss.cxx  GasTPCG4Sim.cxx  GasTPCPseudoReco.cxx  GasTPCReco.cxx  LLR_ECAL.C  TestDstWriter.cxx  TestIOEvtRec.cxx  TestIOEvtRecWithGenie.cxx  TestIOGenieRec.cxx  VertexStats.cxx
gastpc/evtrec/: CMakeLists.txt  EventRecord.cxx  EventRecord.h  LinkDef.h  MCGenInfo.cxx  MCGenInfo.h  MCHit.cxx  MCHit.h  MCParticle.cxx  MCParticle.h  MCTrack.cxx  MCTrack.h  NuInteraction.cxx  NuInteraction.h  RecoParticle.cxx  RecoParticle.h  RootFileReader.cxx  RootFileReader.h  RootFileWriter.cxx  RootFileWriter.h  Units.h  Vector3D.cxx  Vector3D.h  Vector4D.cxx  Vector4D.h
gastpc/g4sim/: ArgonBox.cxx  ArgonBox.h  BaseGeometry.h  BeamSpillGenerator.cxx  BeamSpillGenerator.h  BeamSpillSource.cxx  BeamSpillSource.h  CMakeLists.txt  CosmicsSource.cxx  CosmicsSource.h  DefaultEventAction.cxx  DefaultEventAction.h  DefaultRunAction.h  DefaultSteppingAction.cxx  DefaultTrackingAction.cxx  DuneGArNDDetConstr.cxx  DuneGArNDDetConstr.h  DuneGArNDEcalModuleGeometry.cxx  DuneGArNDEcalModuleGeometry.h  DuneGArNDMagnetYokeGeometry.h  DuneGArNDVesselGeometry.cxx  DuneGArNDVesselGeometry.h  EventGenerationInfo.cxx  EventGenerationInfo.h  GHepReader.cxx  GHepReader.h  GasTPCSimulation.cxx  LBNFBeamTimeDistribution.cxx  LBNFBeamTimeDistribution.h  MaterialsList.cxx  ParticleGunGenerator.cxx  ParticleGunGenerator.h  PersistencyManager.cxx  PersistencyManager.h  PrimaryInteractionSource.h  PrimaryParticleInfo.h  RunManager.cxx  RunManager.h  TrackingHit.cxx  TrackingHit.h  (+12 more)
gastpc/ndtfdst/: CMakeLists.txt  DstEntry.h  DstWriter.cxx  DstWriter.h  LinkDef.h
gastpc/psreco/: CMakeLists.txt  ELossMeasurement.cxx  ELossMeasurement.h  EcalPid.cxx  EcalPid.h  InteractionFinder.cxx  InteractionFinder.h  MomentumSmearer.cxx  MomentumSmearer.h  NeutrinoEnergy.cxx  NeutrinoEnergy.h  ParticleIdentification.cxx  ParticleIdentification.h  Utils.cxx  Utils.h
legacy/ndgeomconstruct/src/: CMakeLists.txt
legacy/ndgeomconstruct/src/datastruct/: Materials.cc
legacy/ndgeomconstruct/src/geom/: CMakeLists.txt  CavityConstruction.cc  MINDConstruction.cc  MagnetConstruction.cc  MagnetConstruction.hh  RockConstruction.cc  ScintillatorConstruction.hh  SupportStructure.cc  SupportStructure.hh  TpcFiducialConstruction.cc  TubeConstruction.hh
legacy/ndgeomconstruct/src/utils/: Units.cc  Units.hh
legacy/ndsim/src/evgen/: CMakeLists.txt  GasTPCGenieFlux.cc  GasTPCGenieFlux.hh  GasTPCGenieGeom.cc  GasTPCGenieGeom.hh  GenieNuEventAlgorithm.cc  GenieNuEventAlgorithm.hh  LbnoGenieGeom.hh  NuEventFileLoadAlgorithm.cc  NuEventFileLoadAlgorithm.hh
legacy/ndsim/src/fluxgen/: CMakeLists.txt  FluxFileLoadAlgorithm.cc  FluxFileLoadAlgorithm.hh  (+4 more)
legacy/src/datastruct/: CMakeLists.txt  LbnoDataLib.cc  LbnoDataLib.hh
legacy/src/simul/: ApplyCuts.cc  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  DetectorHit.hh  DetectorSD.hh  EventAction.cc  EventAction.hh  LqArTankSensitiveDetector.cc  MyUserPostDetConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunManager.cc  RunManager.hh  ScintillatorSensitiveDetector.cc  ScintillatorSensitiveDetector.hh  SteppingAction.cc  SteppingAction.hh  TpcFidSensitiveDetector.cc  TrackInformation.cc  TrackInformation.hh  Trajectory.cc
legacy/src/tools/: CMakeLists.txt  GeantTest.cc  GeomTest.cc  MemTest.cc  copyTree.cc  lbnoFlux.cc  lbnoInfo.cc  lbnoMuonRange.cc  lbnoPlot.cc  lbnoProcess.cc  lbnoReconstruct.cc  lbnoTracking.cc
ndgeomconstruct/src/tools/: CMakeLists.txt  construct.cc  draw.cc
ndgeomconstruct/src/utils/: CMakeLists.txt  DataCards.cc  DataCards.hh
ndsim/src/datastruct/: CMakeLists.txt  DataCardsRecord.cc  GasTPCDataLib.cc  GasTPCDataLib.hh  LinkDef.hh  Materials.cc  Materials.hh  RunStats.hh
ndsim/src/geom/: CMakeLists.txt  GeometryLoader.hh
ndsim/src/utils/: CMakeLists.txt  DataCards.hh  GasTPCPlotter.cc  GasTPCPlotter.hh  GasTPCProcessor.cc  GasTPCProcessor.hh  GasTPCProcessorManager.cc  GasTPCProcessorManager.hh  LbnoProcessor.cc  Units.cc
v1r0/src/: CMakeLists.txt
v1r0/src/config/: GeantSimulation.xml  GeometryBuild.xml
v1r0/src/datastruct/: GasTPCDataLib.cc  GasTPCDataLib.hh  Materials.cc  RunStats.cc
v1r0/src/evgen/: NuEventFileLoadAlgorithm.cc  NuEventFileLoadAlgorithm.hh
v1r0/src/geombuilder/: EcalConstruction.cc  EcalConstruction.hh  MagnetConstruction.cc  NDConstruction.cc  NDConstruction.hh  ScintillatorConstruction.cc  SupportStructure.hh  TpcConstruction.cc  TpcConstruction.hh  TpcVesselConstruction.cc  TpcVesselConstruction.hh
v1r0/src/processors/: CMakeLists.txt  Geant4TrackingProcessor.cc  LoadNuEventProcessor.cc  LoadNuEventProcessor.hh
v1r0/src/simul/: ApplyCuts.cc  DetectorConstruction.cc  DetectorConstruction.hh  DetectorHit.cc  DetectorSD.cc  DetectorSD.hh  Geant4TrackingAlgorithm.cc  Geant4TrackingAlgorithm.hh  LqArTankSensitiveDetector.cc  MyUserPostDetConstruction.cc  MyUserPostDetConstruction.hh  PhysicsList.cc  PrimaryGeneratorAction.cc  RunManager.hh  ScintillatorSensitiveDetector.cc  ScintillatorSensitiveDetector.hh  SteppingAction.hh  vis.mac
v1r0/src/tools/: GasTPCAnalysis.cc  GasTPCAnalysis.hh  GasTPCGeombuild.cc  GasTPCGeombuild.hh  GasTPCParticleGun.hh  GasTPCTracking.cc  GasTPCTracking.hh
v1r0/src/utils/: Env.hh  GasTPCPlotter.cc  GasTPCPlotter.hh  GasTPCProcessor.cc  GasTPCProcessor.hh  GasTPCProcessorManager.cc  Messenger.cc  Misc.hh  ProgressBar.hh  UtlXML.cc
(+558 files in other folders)
